--- a/EvaluateProgram/package.json
+++ b/EvaluateProgram/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "start": "json-server --watch db.json --port 3000",
+  "dev": "live-server --ignore=db.json ."
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
